# Community-Compiler

./: .astylerc  .clang-format  .gitignore  .gitmodules  README.md  Windows-Gen-Project.bat  docs_todo.md  dusk.vim
Docs/: Code Style.md  MemoryManager.md  POA.md
Src/: CMakeLists.txt  Error.cpp  Error.h  Token.cpp  Token.h  TokenStream.cpp  main.cpp  test.ds
bootstrap/: Windows-Gen-Project.bat
bootstrap/frontend/: .gitignore  CMakeLists.txt  Token.h  TokenStream.cpp  TokenStream.h  Windows-Gen-Project.bat  build.sh  test.ds  unix-build.sh
bootstrap/frontend/src/: AST.kt  Ast.cpp  Ast.h  AstDefs.h  AstPrettyPrinter.cpp  AstPrettyPrinter.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  DuskAssembly.cpp  DuskAssembly.h  Error.h  ICodeGenerator.h  ILemitter.cpp  ILemitter.h  ILemmiter.cpp  ILemmiter.h  ISemanticAnalysis.h  ISemanticGenerator.h  Lexer.kt  Parser.cpp  Parser.h  Scope.h  ScopeContext.cpp  ScopeContext.h  SemanticGenerator.cpp  Semantics.cpp  Semantics.h  SemanticsAnalysis.cpp  Terminal.h  Token.h  Token.kt  TokenStream.cpp  TokenStream.h  main.cpp  main.kt  out.fil  test.ds  test2.ds  test3.ds
bootstrap/ilc/: .gitignore  Assembler.cs  AssemblyParser.cs  Opcode.cs  OpcodeReader.cs  OpcodeType.cs  Program.cs  Registers.cs  bob.txt  build.gradle  ilc.csproj  ilc.sln  settings.gradle  test.il  test.sh
bootstrap/stdlib/: bool.ds  f32.ds  f64.ds  i16.ds  i32.ds  i8.ds  il.ds  main.ds  (+8 more)
docs/: Code Style.md  README.md  Syntax.ebnf  dawn-auto-resolve.md  dawn_auto_resolve.md  dawn_usage.md  docs_todo.md  il.md  poa.md
kotlin/: .gitignore
tests/: full-example.ds
(+142 files in other folders)
